[package]
name = "witness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }
notify = "4.0.17"
tokio = { version = "1.17.0", features = ["rt", "macros", "process", "io-util", "io-std", "sync", "net", "time"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.10", features = ["env-filter"] }
